# Halide_test_circt

./: CMakeLists.txt  README.md  gen_xo.tcl  main.cpp  notes.txt  test_run.cpp  timing_results.ods  todo_runs.txt  wave.wcfg  xrt.ini
Notes/: Build halide.txt  configure media v4l2.txt  pl.dtsi
host/: run_test_blur_3x3.cpp  run_test_load.cpp  run_test_load_div_int8.cpp
results_run_fpga/: generated_test_blur_3x3_sliding_window_kernel_f2.s0.v1.v1_tile_16x16.txt  generated_test_blur_3x3_sliding_window_kernel_f2.s0.v1.v1_tile_32x32.txt  generated_test_blur_3x3_sliding_window_kernel_f2.s0.v1.v1_tile_8x8.txt  generated_test_load_div_int8_kernel_f1.s0.v0.v0_1024b_vectorize_128.txt  generated_test_load_div_int8_kernel_f1.s0.v0.v0_128b_vectorize_16.txt  generated_test_load_div_int8_kernel_f1.s0.v0.v0_256b_vectorize_32.txt  generated_test_load_div_int8_kernel_f1.s0.v0.v0_32b_vectorize_04.txt  generated_test_load_div_int8_kernel_f1.s0.v0.v0_512b_vectorize_64.txt  generated_test_load_div_int8_kernel_f1.s0.v0.v0_64b_vectorize_08.txt  generated_test_load_kernel_f1.s0.v0.rebased_axi_32b_no_vectorize.txt  generated_test_load_kernel_f1.s0.v0.v0_axi_1024b_vectorize_32.txt  generated_test_load_kernel_f1.s0.v0.v0_axi_128b_vectorize_4.txt  generated_test_load_kernel_f1.s0.v0.v0_axi_256b_vectorize_8.txt  generated_test_load_kernel_f1.s0.v0.v0_axi_512b_vectorize_16.txt  generated_test_load_kernel_f1.s0.v0.v0_axi_64b_vectorize_2.txt
